Fix: fix spacing and fonts for home page

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -3,15 +3,13 @@
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
-  align-items: center;
 }
 
 .home-content-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  gap: 8rem;
+  gap: 10rem;
   margin-top: 12rem;
 }
 
@@ -28,7 +26,7 @@
 }
 
 .home-title {
-  font-size: 10rem;
+  font-size: 8rem;
   font-family: var(--bellefair);
 }
 
@@ -55,6 +53,9 @@
   .home {
     background-image: url("../assets/home/background-home-tablet.jpg");
   }
+  .home-content-container {
+    gap: 16rem;
+  }
   .home-sub-title {
     font-size: 2rem;
     letter-spacing: 0.33rem;
@@ -77,6 +78,7 @@
   }
   .home-content-container {
     flex-direction: row;
+    justify-content: space-between;
   }
   .home-text-details {
     text-align: left;
